# solve-rubik-s-cube

Rubiks-Cube-Solver-master/Rubiks-Cube-Solver-master/: CMakeLists.txt  LICENSE.md  README.md
Rubiks-Cube-Solver-master/Rubiks-Cube-Solver-master/Runnable/: Rubkis
Rubiks-Cube-Solver-master/Rubiks-Cube-Solver-master/headers/: color.hpp  imageProcessor.hpp  moves.hpp  rCube.hpp  solver.hpp
Rubiks-Cube-Solver-master/Rubiks-Cube-Solver-master/src/: imageProcessor.cpp  main.cpp  rCube.cpp  solver.cpp
